# jira-refinement-agent

./: .env.example  Dockerfile  README.md  domain_config.yaml  pyproject.toml
app/: main.py
app/api/: webhook.py
app/context/: retriever.py
app/core/: config.py
app/jira/: mcp_client.py
app/llm/: client.py  prompts.py
app/models/: domain.py  jira_models.py
app/services/: refinement_service.py
tests/: test_agent_loop.py  test_mcp_client.py  test_models.py  test_prompts.py  test_webhook.py
